--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "chai": "^3.5.0",
     "cross-env": "^4.0.0",
     "enzyme": "^2.9.1",
     "eslint": "^3.6.0",
@@ -55,16 +54,12 @@
     "jest": "^22.1.4",
     "jsdom": "^11.2.0",
     "lodash": "^4.17.4",
-    "mocha": "^3.3.0",
-    "mocha-jsdom": "^1.1.0",
-    "node-fetch": "^1.7.1",
     "prop-types": "*",
     "react": "^15.6.0",
-    "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-redux": "*",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.6.0",
-    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "reselect": "*",
