--- a/package.json
+++ b/package.json
@@ -52,9 +52,12 @@
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^3.0.1",
     "flow-bin": "^0.45.0",
+    "husky": "^4.2.1",
     "jest": "^22.1.4",
     "jsdom": "^11.2.0",
+    "lint-staged": "^10.0.7",
     "lodash": "^4.17.4",
+    "prettier": "^1.19.1",
     "prop-types": "*",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -76,6 +79,7 @@
     "lint:fix": "npm run lint -- --fix",
     "build": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --source-maps",
     "flow": "flow",
+    "prettier": "prettier --write ./**/*.{js,css}",
     "prepublish": "npm run clean && npm run lint && npm run build && npm run test"
   },
   "jest": {
