--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,6 @@
   "rules": {
     "react/jsx-filename-extension": 0,
     "react/no-multi-comp": 0,
-    "react/forbid-prop-types": 0,
-    "semi" : [2, "never"]
+    "react/forbid-prop-types": 0
   }
 }
