--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "lint:fix": "npm run lint -- --fix",
     "build": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --source-maps",
     "flow": "flow",
-    "prettier": "prettier --write ./**/*.{js,css}",
+    "prettier": "prettier --write ./**/*.{js,css,md}",
     "prepublish": "npm run clean && npm run lint && npm run build && npm run test"
   },
   "lint-staged": {
