--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,36 @@
 {
-  "parser": "babel-eslint",
-  "extends": [
-    "plugin:flowtype/recommended",
-    "airbnb"
-  ],
-  "env": {
-    "node": true,
-    "jest": true
-  },
-
-  "plugins": [
-    "standard",
-    "promise",
-    "flowtype"
-  ],
-
-  "rules": {
-    "react/jsx-filename-extension": 0,
-    "react/no-multi-comp": 0,
-    "react/forbid-prop-types": 0
-  }
+    "parser": "babel-eslint",
+    "env": {
+        "node": true,
+        "es6": true,
+        "jest": true
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": 2018,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react"
+    ],
+    "settings": {
+      "react": { 
+        "version": "detect"
+      }
+    },
+    "rules": {
+      "react/jsx-filename-extension": 0,
+      "react/no-multi-comp": 0,
+      "react/forbid-prop-types": 0
+    }
 }
