--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "email": "billy.montgomery@gmail.com",
     "url": "https://github.com/billyxs"
   },
-  "contributors": [{
-    "name": "Calvin Cieslak",
-    "url": "https://github.com/seesleestak"
-  }],
+  "contributors": [
+    {
+      "name": "Calvin Cieslak",
+      "url": "https://github.com/seesleestak"
+    }
+  ],
   "bugs": "https://github.com/hixme/redux-waiter/issues/",
   "dependencies": {
     "lodash": "^4.17.4",
@@ -39,7 +41,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "^22.1.0",
+    "babel-jest": "^25.1.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -51,16 +53,9 @@
     "cross-env": "^4.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^3.6.0",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-flowtype": "^2.32.1",
-    "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-mocha": "^4.9.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-standard": "^3.0.1",
-    "flow-bin": "^0.45.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-react": "^7.18.3",
     "husky": "^4.2.1",
     "jest": "^22.1.4",
     "jsdom": "^11.2.0",
@@ -84,7 +79,7 @@
     "test:watch": "npm test -- --watch",
     "test:examples": "node examples/",
     "cover": "cross-env BABEL_ENV=commonjs istanbul cover _mocha -- --compilers js:babel-register --recursive",
-    "lint": "eslint src test --fix",
+    "lint": "eslint src __tests__ --fix",
     "lint:fix": "npm run lint -- --fix",
     "build": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --source-maps",
     "flow": "flow",
