--- a/package.json
+++ b/package.json
@@ -55,7 +55,10 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.1",
     "jest": "^22.1.4",
     "jsdom": "^11.2.0",
@@ -79,10 +82,10 @@
     "test:watch": "npm test -- --watch",
     "test:examples": "node examples/",
     "cover": "cross-env BABEL_ENV=commonjs istanbul cover _mocha -- --compilers js:babel-register --recursive",
-    "lint": "eslint src __tests__ --fix",
+    "lint": "eslint src __tests__",
     "lint:fix": "npm run lint -- --fix",
     "build": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --source-maps",
-    "prettier": "prettier --write ./**/*.{js,css,md}",
+    "prettier": "prettier --write ./**/*.{js,json,css,md}",
     "prepublish": "npm run clean && npm run lint && npm run build && npm run test"
   },
   "lint-staged": {
