--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "redux": "^3.6.0",
     "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "semver": "^7.1.3"
   },
   "scripts": {
     "clean": "rimraf lib",
@@ -84,7 +85,8 @@
     "lint:fix": "npm run lint -- --fix",
     "build": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --source-maps",
     "prettier": "prettier --write ./**/*.{js,json,css,md}",
-    "prepare": "npm run clean && npm run lint && npm run build && npm run test"
+    "prepare": "npm run clean && npm run lint && npm run build && npm run test",
+    "release": "cross-env ./scripts/release.sh"
   },
   "lint-staged": {
     "(src|__tests__)/**/*.{js,jsx}": [
